--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -1,4 +1,11 @@
 vi:
+  views:
+    pagination:
+      first: "&laquo; Đầu tiên"
+      last: "Cuối cùng &raquo;"
+      previous: "&lsaquo; Trước"
+      next: "Tiếp &rsaquo;"
+      truncate: "&hellip;"
   layouts:
     footer:
       version: Phiên bản
@@ -15,6 +22,15 @@ vi:
       settings: Cài đặt
       logout: Đăng xuất
       login: Đăng nhập
+    user_navbar:
+      logo: Sân bay
+      profile: Hồ sơ
+      my_stores: Cửa hàng
+      references: Tham khảo
+      english_html: Tiếng Anh
+      vietnamese_html: Tiếng Việt
+      login: Đăng nhập
+      logout: Đăng xuát
       english: "Tiếng Anh"
       vietnamese: "Tiếng Việt"
     employee_navbar:
@@ -31,6 +47,15 @@ vi:
       login: Đăng nhập
       english: "Tiếng Anh"
       vietnamese: "Tiếng Việt"
+    user_navbar:
+      logo: Sân bay
+      profile: Hồ sơ
+      my_stores: Cửa hàng
+      references: Tham khảo
+      english_html: Tiếng Anh
+      vietnamese_html: Tiếng Việt
+      login: Đăng nhập
+      logout: Đăng xuất
     sidebar:
       contracts: Hợp đồng
       slots: Khu vực
@@ -58,15 +83,21 @@ vi:
       vietnamese: "Tiếng Việt"
   static_pages:
     home:
-      title: "Trang chủ"
-      welcome: "Chào mừng đến với hệ thống quản lý cửa hàng sân bay!"
-      home_breadcrumb: "Trang chủ"
-      welcome_breadcrumb: "Chào mừng"
-      view_more: "Xem thêm..."
-      airport_name: "Sân bay Nội bài"
-      content: |
-        Sân bay Quốc tế Nội Bài,<br>
-        sân bay lớn nhất miền bắc Việt Nam, phục vụ thủ đô Hà Nội.
+      title: "Home"
+      address: Phú Minh Ward Sóc Sơn  District Hà Nội City
+      content_title: Việt Nam
+      all_terminal: Tất cả sảnh bay
+      terminal_dropdown: Sảnh bay
+      question: Bạn không tìm được khu vực bán hàng ưng ý?
+      answer: Không gì là không thể khi chúng ta cùng nhau trao đổi. Hãy gọi chúng tôi và cùng tìm ra giải pháp phù hợp với bạn.
+      description_title: Tìm kiếm Không gian Hợp tác ở Việt Nam
+      description_content: |
+                            Với nét văn hóa kinh doanh năng động, không gian hợp tác của chúng tôi ở Việt Nam là
+                            lựa chọn hoàn hảo để nhân thành công của tất cả các nhóm lớn nhỏ lên nhiều lần. Với sự tiện dụng và
+                            linh hoạt không đâu sánh bằng, không gian hợp tác, các văn phòng riêng tuyệt đẹp, và các phòng họp
+                            rộng rãi của chúng tôi là sự đảm bảo cho năng suất của bạn. Ngoài ra, các sự kiện tại chỗ đa dạng
+                            và phong phú của chúng tôi giúp bạn dễ dàng mở rộng mạng lưới quan hệ của mình và tăng cường hợp tác.
+                            Để có được một văn phòng tuyệt đẹp với bạn là trung tâm của mọi hoạt động, hãy tham gia WeWork ngay hôm nay.
   users:
     new:
       title: "Đăng ký"
@@ -104,6 +135,60 @@ vi:
       invalid_login: "Email hoặc mật khẩu không hợp lệ."
     destroy:
       logout_success: "Đăng xuất thành công!"
+  terminals: 
+    show:
+      title: Sảnh bay
+      terminal_dropdown: Sảnh bay
+      airport_terminal: Sảnh bay sân bay Nội Bài
+      terminal_information: Thông tin terminal
+      name: Tên
+      area: Diện tích
+      description_title: Bạn quan tâm đến sảnh bay này?
+      address: Phú Minh Ward Sóc Sơn  District Hà Nội City
+  slots:
+    show:
+      title: Khu vực
+      review: nhận xét
+      address: Phú Minh Ward Sóc Sơn  District Hà Nội City
+      area: Diện tích
+      price: Giá thuê
+      status: Trạng thái
+      amenities: Tiện ích
+      mission: Luôn hướng tới lợi ích doanh nghiệp và trải nghiệm khách hàng
+      clean: Dịch vụ vệ sinh cao cấp
+      business: Môi trường kinh doanh công bằng
+      affordable: Giá cả hợp lý
+      location: Vị trí kinh doanh thuận lợi
+      googlemap_link: Xem chi tiết vị trí tại đây
+      interested_in: Bạn có hứng thú với khu vực này?
+      mission_content: |
+                        Chúng tôi rất chú trọng đến lợi ích của các doanh nghiệp hợp tác,
+                        hướng tới môi trường kinh doanh lành mạnh, phát triển bền vững.
+      hire_now: Đăng ký thuê ngay!
+      rule: "Hãy chắc chắn bạn đồng ý với điều khoản của chúng tôi "
+      rule_link: Tham khảo điều khoản
+      experience_title: Bạn nên trải nghiệm trực tiếp
+      experience: "Lên lịch ghé thăm hoặc liên lạc với chúng tôi: "
+  stores:
+    show:
+      search: Tìm kiếm
+      address: Phú Minh Ward Sóc Sơn  District Hà Nội City
+      description: Mô tả chi tiết
+      clean: Dịch vụ vệ sinh cao cấp
+      business: Môi trường kinh doanh công bằng
+      affordable: Giá cả hợp lý
+      location: Vị trí kinh doanh thuận lợi
+      mystore_information: Thông tin cửa hàng
+      area: Diện tích
+      price: Giá thuê
+      status: Trạng thái
+      hiring: Đang thuê
+      waiting: Đang chờ
+      cancel_check: Nếu bạn muốn hủy yêu cầu, vui lòng cân nhắc kỹ và bấm vào đây
+      cancel: Huỷ yêu cầu
+      experience_title: Bạn nên thử trải nghiệm trực tiếp một lần!
+      experience: "Lên lịch ghé thăm hoặc liên lạc với chúng tôi: "
+      googlemap_link: Xem chi tiết vị trí tại đây
   employee_sessions:
     new:
       title: Nhân viên đăng nhập
@@ -169,20 +254,6 @@ vi:
       deny: Từ chối
       pending: Chờ duyệt
       submit: Submit
-  slots:
-    index:
-      slots: Slots
-      id: ID
-      name: Tên
-      terminal: Sảnh
-      area: Diện tích
-      status: Trạng thái
-      price: Giá
-      action: Thao tác
-      per_month: $/tháng
-    slot:
-      empty: Trống
-      not_empty: Đã thuê
   views:
     pagination:
       first: "« Đầu"
@@ -190,3 +261,22 @@ vi:
       previous: "‹ Trước"
       next: "Tiếp ›"
       truncate: "…"
+  terminals: 
+    show:
+      title: Sảnh bay
+      terminal: Sảnh bay-
+      overview: Giới thiệu
+      area: Diện tích
+      slots: Cửa hàng
+      stores: Cửa hàng
+      contact: Liên hệ
+      manager: Người quản lý
+      phone_number: Số điện thoại
+      email: Mail
+      description: Mô tả
+      stt: STT
+      slot_name: Mã cửa hàng
+      status: Trạng thái
+      area: Diện tích
+      empty: Còn trống
+      used: Đã được sử dụng
